# LightweightNumericalOptimizationTools

./: CMakeCache.txt  CMakeLists.txt  README.md
cmake/: LNOTConfig.cmake.in  lnot.pc.in
demo/: CMakeLists.txt  demo_LBFGS.cpp  demo_LinearSolver.cpp  demo_Newton.cpp  demo_PrecondLinearSolver.cpp  demo_PrecondTrustRegionSubproblemSolver.cpp  demo_QuasiNewton.cpp  demo_SequenceOfSolvers.cpp  demo_TrustRegionSubproblemSolver.cpp  demo_weightedL2Norm.cpp
doc/: Doxyfile.in
include/LNOT/: Assert.hpp  BasicLinalg.hpp  BasicLinalg_impl.hpp  CRTPBase.hpp  Core.hpp  DenseMatrixOp.hpp  DenseMatrixOp_impl.hpp  DiagonalPreconditionerOp.hpp  DiagonalPreconditionerOp_impl.hpp  Settings.hpp  SymmetricDenseMatrixOp.hpp  SymmetricDenseMatrixOp_impl.hpp  Traits.hpp
include/LNOT/BasicLinalg/: BasicLinalg.h  BasicLinalg.hpp  BasicLinalg_impl.hpp  CLinearOp.hpp  DiagonalPreconditionerOp.hpp  DiagonalPreconditionerOp_impl.hpp  IdentityOp.hpp  IdentityPreconditionerOp.hpp  LinearOpWrapper.hpp  SymmetricDenseMatrixOp.hpp  SymmetricDenseMatrixOp_impl.hpp
include/LNOT/Containers/: CircularBuffer.hpp  CircularBuffer_impl.hpp
include/LNOT/ConvergenceCriterions/: CConvergenceCriterionFor.hpp  ConvergenceCriterionBase.hpp  L1Norm.hpp  L1NormConvergenceCriterion.hpp  L2Norm.hpp  L2NormConvergenceCriterion.hpp  LInfNorm.hpp  LInfNormConvergenceCriterion.hpp  WeightedL2Norm.hpp  WeightedL2NormConvergenceCriterion.hpp  WeightedL2NormConvergenceCriterion_impl.hpp  WeightedL2Norm_impl.hpp
include/LNOT/FloatingPoint/: FPComparator.hpp  NumTraits.hpp
include/LNOT/GeneralSolvers/: BFGS.hpp  BFGS_impl.hpp  FirstOrderSolverBase.hpp  GradientDescent.hpp  GradientDescent_impl.hpp  LBFGS.hpp  LBFGS_impl.hpp  LSR1TrustRegionSolver.hpp  LSR1TrustRegionSolver_impl.hpp  LimitedMemorySolverBase.hpp  NLCGUpdateStrategy.hpp  NewtonSolver.hpp  NewtonSolver_impl.hpp  NewtonTrustRegionSolver.hpp  NewtonTrustRegionSolver_impl.hpp  NonLinearConjugateGradient.hpp  NonLinearConjugateGradient_impl.hpp  SR1TrustRegionSolver.hpp  SR1TrustRegionSolver_impl.hpp  SecondOrderSolverBase.hpp  SequenceOfSolvers.hpp  SequenceOfSolvers_impl.hpp  TrustRegionMethodBase.hpp
include/LNOT/LineSearch/: BacktrackingLineSearch.hpp  BacktrackingLineSearch_impl.hpp  BisectionLineSearch.hpp  BisectionLineSearch_impl.hpp  LineSearchBase.hpp
include/LNOT/LineSearches/: BacktrackingLineSearch.hpp  BacktrackingLineSearch_impl.hpp  BisectionLineSearch.hpp  BisectionLineSearch_impl.hpp  LineSearchBase.hpp  NoLineSearch.hpp
include/LNOT/LinearSolvers/: ConjugateGradient.hpp  ConjugateGradient_impl.hpp  CoupledLanczosSolver.hpp  CoupledLanczosSolver_impl.hpp  LanczosSolver.hpp  LanczosSolver_impl.hpp  LinearSolverBase.hpp
include/LNOT/Oracle/: OracleBase.hpp  OracleWrapper.hpp
include/LNOT/Oracles/: HessianOpAdaptor.hpp  OracleBase.hpp  OracleWrapper.hpp  OracleWrapper_impl.hpp  PrecondOpAdaptor.hpp  concepts.hpp
include/LNOT/Oracles/Trial/: OracleBase.hpp  OracleBase_impl.hpp  OracleWrapper.hpp  concepts.hpp  helpers.hpp
include/LNOT/TRSSolvers/: CoupledLanczosTRSSolver.hpp  CoupledLanczosTRSSolver_impl.hpp  LanczosFullOrthTRSSolver.hpp  LanczosFullOrthTRSSolver_impl.hpp  LanczosTRSSolver.hpp  LanczosTRSSolverBase.hpp  LanczosTRSSolverBase_impl.hpp  LanczosTRSSolver_impl.hpp  TRSSolverBase.hpp  TruncatedConjugateGradient.hpp  TruncatedConjugateGradient_impl.hpp
include/LNOT/misc/: AdlMath.hpp  ZipLeadByView.hpp  ZipLeadByView_impl.hpp
src/LNOT/: DiagonalPreconditionerOp.cpp  SymmetricDenseMatrixOp.cpp
src/LNOT/BasicLinalg/: BasicLinalg.c  DiagonalPreconditionerOp.cpp  SymmetricDenseMatrixOp.cpp
src/LNOT/Containers/: CircularBuffer.cpp
src/LNOT/GeneralSolvers/: BFGS.cpp  GradientDescent.cpp  LBFGS.cpp  LSR1TrustRegionSolver.cpp  NewtonSolver.cpp  NewtonTrustRegionSolver.cpp  NonLinearConjugateGradient.cpp  SR1TrustRegionSolver.cpp
src/LNOT/LineSearch/: BacktrackingLineSearch.cpp  BisectionLineSearch.cpp
src/LNOT/LineSearches/: BisectionLineSearch.cpp  NoLineSearch.cpp
src/LNOT/LinearSolvers/: ConjugateGradient.cpp  CoupledLanczosSolver.cpp  LanczosSolver.cpp
src/LNOT/TRSSolvers/: CoupledLanczosTRSSolver.cpp  LanczosFullOrthTRSSolver.cpp  LanczosTRSSolver.cpp  TruncatedConjugateGradient.cpp
